[gd_scene load_steps=48 format=2]

[ext_resource path="res://TilesetPadat.tres" type="TileSet" id=1]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/01-Idle/Idle 02.png" type="Texture" id=2]
[ext_resource path="res://Hero.gd" type="Script" id=3]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/06-Hit/Hit 03.png" type="Texture" id=4]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 06.png" type="Texture" id=5]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 01.png" type="Texture" id=6]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/04-Fall/Fall 01.png" type="Texture" id=7]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/03-Jump/Jump 01.png" type="Texture" id=8]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 03.png" type="Texture" id=9]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/03-Jump/Jump 02.png" type="Texture" id=10]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/01-Idle/Idle 04.png" type="Texture" id=11]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 02.png" type="Texture" id=12]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 04.png" type="Texture" id=13]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 05.png" type="Texture" id=14]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/06-Hit/Hit 01.png" type="Texture" id=15]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/06-Hit/Hit 04.png" type="Texture" id=16]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/01-Idle/Idle 03.png" type="Texture" id=17]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/06-Hit/Hit 02.png" type="Texture" id=18]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/03-Jump/Jump 03.png" type="Texture" id=19]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/01-Idle/Idle 01.png" type="Texture" id=20]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/01-Idle/Idle 05.png" type="Texture" id=21]
[ext_resource path="res://Level3.gd" type="Script" id=22]
[ext_resource path="res://TilesetTembus.tres" type="TileSet" id=23]
[ext_resource path="res://assets/Palm Tree Island/Background/BG Image.png" type="Texture" id=24]
[ext_resource path="res://assets/Palm Tree Island/Background/Additional Sky.png" type="Texture" id=25]
[ext_resource path="res://assets/Palm Tree Island/Background/Additional Water.png" type="Texture" id=26]
[ext_resource path="res://assets/Palm Tree Island/Background/Big Clouds.png" type="Texture" id=27]
[ext_resource path="res://assets/Palm Tree Island/Background/Small Cloud 1.png" type="Texture" id=28]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/08-Dead Ground/Dead Ground 03.png" type="Texture" id=34]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/08-Dead Ground/Dead Ground 02.png" type="Texture" id=35]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/08-Dead Ground/Dead Ground 04.png" type="Texture" id=36]
[ext_resource path="res://assets/Captain Clown Nose/Captain Clown Nose/Captain Clown Nose without Sword/08-Dead Ground/Dead Ground 01.png" type="Texture" id=37]
[ext_resource path="res://assets/Wood and Paper UI/Sprites/Prefabs/3.png" type="Texture" id=38]
[ext_resource path="res://assets/Minecraft.ttf" type="DynamicFontData" id=41]
[ext_resource path="res://PopupButton.tres" type="StyleBox" id=43]
[ext_resource path="res://FontButton.tres" type="DynamicFont" id=44]
[ext_resource path="res://assets/sounds/uh-edit.ogg" type="AudioStream" id=47]
[ext_resource path="res://assets/sounds/powerUp2.ogg" type="AudioStream" id=48]
[ext_resource path="res://assets/sounds/jump1.ogg" type="AudioStream" id=49]
[ext_resource path="res://assets/music/Juhani Junkala [Chiptune Adventures] 2. Stage 2.ogg" type="AudioStream" id=50]
[ext_resource path="res://assets/sounds/whoosh.ogg" type="AudioStream" id=51]
[ext_resource path="res://PopupTerimaKasih.gd" type="Script" id=52]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 112, 10 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 18 ), ExtResource( 4 ), ExtResource( 16 ) ],
"loop": false,
"name": "Terluka",
"speed": 12.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "Jatuh",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 2 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 21 ) ],
"loop": true,
"name": "Diam",
"speed": 12.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "LariCepat",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 5 ) ],
"loop": true,
"name": "Lari",
"speed": 12.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 35 ), ExtResource( 34 ), ExtResource( 36 ) ],
"loop": false,
"name": "Mati",
"speed": 12.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 19 ) ],
"loop": false,
"name": "Lompat",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 818, 26 )

[sub_resource type="DynamicFont" id=5]
size = 12
extra_spacing_bottom = 6
font_data = ExtResource( 41 )

[node name="Level3" type="Node2D"]
script = ExtResource( 22 )

[node name="TileMapPadat" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 5
format = 1
tile_data = PoolIntArray( -327683, 5, 0, -327682, 5, 0, -327681, 5, 0, -393216, 5, 0, -393215, 5, 0, -393214, 5, 0, -393213, 5, 0, -393212, 5, 0, -393211, 5, 0, -393210, 5, 0, -393209, 5, 0, -393208, 5, 0, -393207, 5, 0, -393206, 5, 0, -393205, 5, 0, -393204, 5, 0, -393203, 5, 0, -393202, 5, 0, -393201, 5, 0, -393200, 5, 0, -393199, 5, 0, -393198, 5, 0, -393197, 5, 0, -393196, 5, 0, -393195, 5, 0, -393194, 5, 0, -393193, 5, 0, -393192, 5, 0, -393191, 5, 0, -393190, 5, 0, -393189, 5, 0, -393188, 5, 0, -393187, 5, 0, -393186, 5, 0, -393185, 5, 0, -393184, 5, 0, -393183, 5, 0, -393182, 5, 0, -393181, 5, 0, -393180, 5, 0, -393179, 5, 0, -393178, 5, 0, -393177, 5, 0, -393176, 5, 0, -393175, 5, 0, -393174, 5, 0, -393173, 5, 0, -393172, 5, 0, -393171, 5, 0, -393170, 5, 0, -393169, 5, 0, -393168, 5, 0, -393167, 5, 0, -393166, 5, 0, -262147, 5, 0, -262146, 12, 0, -262145, 8, 0, -327680, 8, 0, -327679, 8, 0, -327678, 8, 0, -327677, 8, 0, -327676, 8, 0, -327675, 8, 0, -327674, 8, 0, -327673, 8, 0, -327672, 8, 0, -327671, 8, 0, -327670, 8, 0, -327669, 8, 0, -327668, 8, 0, -327667, 8, 0, -327666, 8, 0, -327665, 8, 0, -327664, 8, 0, -327663, 8, 0, -327662, 8, 0, -327661, 8, 0, -327660, 8, 0, -327659, 8, 0, -327658, 8, 0, -327657, 8, 0, -327656, 8, 0, -327655, 8, 0, -327654, 8, 0, -327653, 8, 0, -327652, 8, 0, -327651, 8, 0, -327650, 8, 0, -327649, 8, 0, -327648, 8, 0, -327647, 8, 0, -327646, 8, 0, -327645, 8, 0, -327644, 8, 0, -327643, 8, 0, -327642, 8, 0, -327641, 8, 0, -327640, 8, 0, -327639, 8, 0, -327638, 8, 0, -327637, 8, 0, -327636, 8, 0, -327635, 8, 0, -327634, 8, 0, -327633, 8, 0, -327632, 8, 0, -327631, 5, 0, -196611, 5, 0, -196610, 4, 0, -262134, 6, 0, -262133, 5, 0, -262132, 5, 0, -262131, 5, 0, -262130, 5, 0, -262129, 5, 0, -262095, 6, 0, -131075, 5, 0, -131074, 4, 0, -196598, 6, 0, -196597, 5, 0, -196596, 5, 0, -196595, 5, 0, -196594, 5, 0, -196593, 5, 0, -196559, 6, 0, -65539, 5, 0, -65538, 4, 0, -131062, 6, 0, -131061, 5, 0, -131060, 5, 0, -131059, 5, 0, -131058, 5, 0, -131057, 5, 0, -131036, 40, 0, -131023, 6, 0, -3, 5, 0, -2, 4, 0, -65526, 6, 0, -65525, 5, 0, -65524, 5, 0, -65523, 5, 0, -65522, 5, 0, -65521, 5, 0, -65502, 40, 0, -65498, 40, 0, -65491, 43, 0, -65490, 42, 0, -65489, 42, 0, -65488, 42, 0, -65487, 19, 0, 65533, 5, 0, 65534, 4, 0, 10, 6, 0, 11, 5, 0, 12, 5, 0, 13, 5, 0, 14, 5, 0, 15, 5, 0, 32, 40, 0, 40, 40, 0, 49, 6, 0, 131069, 5, 0, 131070, 4, 0, 65546, 6, 0, 65547, 5, 0, 65548, 5, 0, 65549, 5, 0, 65550, 5, 0, 65551, 5, 0, 65585, 6, 0, 196605, 5, 0, 196606, 4, 0, 131082, 6, 0, 131083, 5, 0, 131084, 5, 0, 131085, 5, 0, 131086, 5, 0, 131087, 5, 0, 131121, 6, 0, 262141, 5, 0, 262142, 4, 0, 196618, 6, 0, 196619, 5, 0, 196620, 5, 0, 196621, 5, 0, 196622, 5, 0, 196623, 5, 0, 196657, 6, 0, 327677, 5, 0, 327678, 4, 0, 262154, 6, 0, 262155, 5, 0, 262156, 5, 0, 262157, 5, 0, 262158, 5, 0, 262159, 5, 0, 262193, 6, 0, 393213, 5, 0, 393214, 4, 0, 327690, 6, 0, 327691, 5, 0, 327692, 5, 0, 327693, 5, 0, 327694, 5, 0, 327695, 5, 0, 327729, 6, 0, 458749, 5, 0, 458750, 4, 0, 393226, 6, 0, 393227, 5, 0, 393228, 5, 0, 393229, 5, 0, 393230, 5, 0, 393231, 5, 0, 393265, 6, 0, 524285, 5, 0, 524286, 14, 0, 524287, 3, 0, 458752, 3, 0, 458753, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 15, 0, 458763, 5, 0, 458764, 5, 0, 458765, 5, 0, 458766, 5, 0, 458767, 5, 0, 458785, 6, 0, 458786, 5, 0, 458787, 5, 0, 458788, 5, 0, 458789, 5, 0, 458790, 5, 0, 458791, 4, 0, 458801, 6, 0, 589821, 5, 0, 589822, 5, 0, 589823, 5, 0, 524288, 5, 0, 524289, 5, 0, 524290, 5, 0, 524291, 5, 0, 524292, 5, 0, 524293, 5, 0, 524294, 5, 0, 524295, 5, 0, 524296, 5, 0, 524297, 5, 0, 524298, 5, 0, 524299, 5, 0, 524300, 5, 0, 524301, 5, 0, 524302, 5, 0, 524303, 5, 0, 524321, 6, 0, 524322, 5, 0, 524323, 5, 0, 524324, 5, 0, 524325, 5, 0, 524326, 5, 0, 524327, 4, 0, 524337, 6, 0 )

[node name="TileMapTembus" type="TileMap" parent="."]
tile_set = ExtResource( 23 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 196641, 0, 0, 196642, 3, 0, 196643, 3, 0, 196644, 3, 0, 196645, 3, 0, 196646, 3, 0, 196647, 2, 0, 262177, 6, 0, 262178, 5, 0, 262179, 5, 0, 262180, 5, 0, 262181, 5, 0, 262182, 5, 0, 262183, 4, 0, 262188, 0, 0, 262189, 3, 0, 262190, 3, 0, 262191, 3, 0, 262192, 3, 0, 262193, 15, 0, 327713, 6, 0, 327714, 5, 0, 327715, 5, 0, 327716, 5, 0, 327717, 5, 0, 327718, 5, 0, 327719, 4, 0, 327724, 6, 0, 327725, 5, 0, 327726, 5, 0, 327727, 5, 0, 327728, 5, 0, 327729, 5, 0, 393249, 6, 0, 393250, 5, 0, 393251, 5, 0, 393252, 5, 0, 393253, 5, 0, 393254, 5, 0, 393255, 4, 0, 393260, 6, 0, 393261, 5, 0, 393262, 5, 0, 393263, 5, 0, 393264, 5, 0, 393265, 5, 0, 458796, 6, 0, 458797, 5, 0, 458798, 5, 0, 458799, 5, 0, 458800, 5, 0, 458801, 5, 0, 524332, 6, 0, 524333, 5, 0, 524334, 5, 0, 524335, 5, 0, 524336, 5, 0, 524337, 5, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="TileMapTembus"]

[node name="Ke 1" type="CollisionShape2D" parent="TileMapTembus/StaticBody2D"]
position = Vector2( 1168, 106 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Ke 2" type="CollisionShape2D" parent="TileMapTembus/StaticBody2D"]
position = Vector2( 1520, 138 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Hero" type="KinematicBody2D" parent="."]
collision_mask = 30
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="Hero"]
frames = SubResource( 2 )
animation = "Mati"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hero"]
position = Vector2( -0.379395, 0.538681 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="Hero"]
position = Vector2( 62.8502, 0.85807 )
current = true
limit_left = -55
limit_top = -164
limit_right = 1600
limit_bottom = 280
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_top = 0.4
drag_margin_right = 0.11
drag_margin_bottom = 0.4
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Timer" type="Timer" parent="Hero"]
wait_time = 0.2
one_shot = true

[node name="EfekLompat" type="AudioStreamPlayer" parent="Hero"]
stream = ExtResource( 49 )
volume_db = -25.0
pitch_scale = 2.0

[node name="EfekKoin" type="AudioStreamPlayer" parent="Hero"]
stream = ExtResource( 48 )
volume_db = -10.0

[node name="EfekTerkenaMusuh" type="AudioStreamPlayer" parent="Hero"]
stream = ExtResource( 47 )
volume_db = -15.0
pitch_scale = 1.2

[node name="EfekDash" type="AudioStreamPlayer" parent="Hero"]
stream = ExtResource( 51 )
volume_db = -15.0

[node name="Zona Jatuh" type="Area2D" parent="."]
position = Vector2( 590, 304 )
collision_layer = 16
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zona Jatuh"]
position = Vector2( 204, 24 )
shape = SubResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Langit" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )
motion_offset = Vector2( 0, -128 )
motion_mirroring = Vector2( 384, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Langit"]
position = Vector2( -33.9803, 124 )
scale = Vector2( 4.18745, 1 )
texture = ExtResource( 24 )
centered = false

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/Langit"]
position = Vector2( -38.776, -148 )
scale = Vector2( 49.743, 9.5625 )
texture = ExtResource( 25 )
centered = false

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/Langit"]
position = Vector2( -18, 247 )
scale = Vector2( 48.8125, 1.28125 )
texture = ExtResource( 26 )
centered = false

[node name="AwanBesar" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 0, -100 )
motion_mirroring = Vector2( 420, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/AwanBesar"]
modulate = Color( 1, 1, 1, 0.482353 )
position = Vector2( 20, 14 )
scale = Vector2( 0.9375, 1 )
texture = ExtResource( 27 )
centered = false

[node name="AwanKecil" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.7, 0.7 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/AwanKecil"]
position = Vector2( 572, 36 )
texture = ExtResource( 28 )
centered = false

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/AwanKecil"]
position = Vector2( 948, 12 )
texture = ExtResource( 28 )
centered = false

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/AwanKecil"]
position = Vector2( 1278, 6 )
texture = ExtResource( 28 )
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PopupTerimaKasih" type="CenterContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.425
anchor_right = 0.5
anchor_bottom = 0.425
margin_left = -58.0
margin_top = -402.0
margin_right = 142.0
margin_bottom = -219.0
script = ExtResource( 52 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PopupTerimaKasih"]
visible = false
margin_left = 36.0
margin_top = 27.0
margin_right = 164.0
margin_bottom = 155.0
texture = ExtResource( 38 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PopupTerimaKasih"]
margin_top = 13.0
margin_right = 200.0
margin_bottom = 170.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="CanvasLayer/PopupTerimaKasih/VBoxContainer"]
margin_right = 200.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 5 )
text = "Terima kasih telah memainkan 
game ini!
Sayangnya, ini adalah Akhir!
Anda dapat kembali Menu Utama.
dengan mengklik tombol
di bawah ini."
align = 1
valign = 1

[node name="Label2" type="Label" parent="CanvasLayer/PopupTerimaKasih/VBoxContainer"]
visible = false
margin_top = 131.0
margin_right = 200.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 5 )
text = "Terima Kasih!"
align = 1
valign = 1

[node name="Exit" type="Button" parent="CanvasLayer/PopupTerimaKasih/VBoxContainer"]
margin_top = 131.0
margin_right = 200.0
margin_bottom = 157.0
custom_styles/hover = ExtResource( 43 )
custom_styles/pressed = ExtResource( 43 )
custom_styles/focus = ExtResource( 43 )
custom_styles/disabled = ExtResource( 43 )
custom_styles/normal = ExtResource( 43 )
custom_fonts/font = ExtResource( 44 )
text = "Tekan N untuk ke Menu Utama"

[node name="Tween" type="Tween" parent="CanvasLayer/PopupTerimaKasih"]

[node name="EfekMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 50 )
volume_db = -30.0
autoplay = true

[connection signal="hero_update_health" from="Hero" to="." method="_on_Hero_hero_update_health"]
[connection signal="hero_update_koin" from="Hero" to="." method="_on_Hero_hero_update_koin"]
[connection signal="timeout" from="Hero/Timer" to="Hero" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Zona Jatuh" to="." method="_on_Zona_Jatuh_body_entered"]
[connection signal="pressed" from="CanvasLayer/PopupTerimaKasih/VBoxContainer/Exit" to="CanvasLayer/PopupTerimaKasih" method="_on_Exit_pressed"]
